// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graph Component Should Render the component with table containing data 1`] = `
<div>
  <div
    class="awesomemotive-container"
  >
    <div
      class="awesomemotive-graph-reload"
    >
      <div>
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.1 4.8l-3-2.5V4c-4.4 0-8 3.6-8 8 0 3.7 2.5 6.9 6 7.7.3.1.6.1 1 .2l.2-1.5c-.4 0-.7-.1-1.1-.2l-.1.2v-.2c-2.6-.8-4.5-3.3-4.5-6.2 0-3.6 2.9-6.5 6.5-6.5v1.8l3-2.5zM20 11c-.2-1.4-.7-2.7-1.6-3.8l-1.2.8c.7.9 1.1 2 1.3 3.1L20 11zm-1.5 1.8c-.1.5-.2 1.1-.4 1.6s-.5 1-.8 1.5l1.2.9c.4-.5.8-1.1 1-1.8s.5-1.3.5-2l-1.5-.2zm-5.6 5.6l.2 1.5c1.4-.2 2.7-.7 3.8-1.6l-.9-1.1c-.9.7-2 1.1-3.1 1.2z"
          />
        </svg>
      </div>
    </div>
    <div
      class="awesomemotive-graph-container"
    >
      <table
        class="graph"
      >
        <caption>
          Test Title
        </caption>
        <thead>
          <tr>
            <th
              scope="col"
            >
              Page Views
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            style="height: 64%;"
          >
            <th
              scope="row"
            >
              Sat Jul 16 2022
            </th>
            <td>
              <span>
                31776
              </span>
            </td>
          </tr>
          <tr
            style="height: 78%;"
          >
            <th
              scope="row"
            >
              Sun Jul 17 2022
            </th>
            <td>
              <span>
                38863
              </span>
            </td>
          </tr>
          <tr
            style="height: 27%;"
          >
            <th
              scope="row"
            >
              Mon Jul 18 2022
            </th>
            <td>
              <span>
                13690
              </span>
            </td>
          </tr>
          <tr
            style="height: 68%;"
          >
            <th
              scope="row"
            >
              Tue Jul 19 2022
            </th>
            <td>
              <span>
                33777
              </span>
            </td>
          </tr>
          <tr
            style="height: 38%;"
          >
            <th
              scope="row"
            >
              Wed Jul 20 2022
            </th>
            <td>
              <span>
                18959
              </span>
            </td>
          </tr>
          <tr
            style="height: 70%;"
          >
            <th
              scope="row"
            >
              Thu Jul 21 2022
            </th>
            <td>
              <span>
                34964
              </span>
            </td>
          </tr>
          <tr
            style="height: 16%;"
          >
            <th
              scope="row"
            >
              Fri Jul 22 2022
            </th>
            <td>
              <span>
                8006
              </span>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        style="text-align: center;"
      >
        Time Stamp
      </div>
    </div>
  </div>
</div>
`;

exports[`Graph Component Should Render the default component with empty props 1`] = `
<div>
  <div
    class="awesomemotive-container"
  >
    <div
      class="awesomemotive-graph-reload"
    >
      <div>
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.1 4.8l-3-2.5V4c-4.4 0-8 3.6-8 8 0 3.7 2.5 6.9 6 7.7.3.1.6.1 1 .2l.2-1.5c-.4 0-.7-.1-1.1-.2l-.1.2v-.2c-2.6-.8-4.5-3.3-4.5-6.2 0-3.6 2.9-6.5 6.5-6.5v1.8l3-2.5zM20 11c-.2-1.4-.7-2.7-1.6-3.8l-1.2.8c.7.9 1.1 2 1.3 3.1L20 11zm-1.5 1.8c-.1.5-.2 1.1-.4 1.6s-.5 1-.8 1.5l1.2.9c.4-.5.8-1.1 1-1.8s.5-1.3.5-2l-1.5-.2zm-5.6 5.6l.2 1.5c1.4-.2 2.7-.7 3.8-1.6l-.9-1.1c-.9.7-2 1.1-3.1 1.2z"
          />
        </svg>
      </div>
    </div>
    <div
      class="awesomemotive-graph-container"
    >
      <div
        style="text-align: center;"
      >
        Time Stamp
      </div>
    </div>
  </div>
</div>
`;
